--- a/.github/workflows/leethub_extension.yml
+++ b/.github/workflows/leethub_extension.yml
@@ -10,6 +10,7 @@ permissions:
 jobs:
   detect:
     runs-on: ubuntu-latest
+    # outputs 키는 모두 소문자로 통일합니다.
     outputs:
       should_run: ${{ steps.check_leethub.outputs.should_run }}
       package_name: ${{ steps.detect_package.outputs.PACKAGE_NAME }}
@@ -20,31 +21,42 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
         with:
-          fetch-depth: 2 # 이전 로그 2개까지 해서 변경점 비교(디폴트는 1)
+          fetch-depth: 2
 
       - name: Check if LeetHub Commit
         id: check_leethub
+        shell: bash
         run: |
-          COMMIT_MSG=$(git log -1 --pretty=%B | tail -n 1)
+          # git log에서 메시지 전체를 가져옵니다 (제목+본문)
+          COMMIT_MSG=$(git log -1 --pretty=%B)
           echo "Latest commit message: $COMMIT_MSG"
 
-          if [[ "$COMMIT_MSG" == Time:* && "$COMMIT_MSG" == *"- LeetHub" ]]; then
+          # 정규식으로 "Time:" 으로 시작하고 "LeetHub"가 포함되어 있는지 확인
+          if [[ "$COMMIT_MSG" =~ ^Time: && "$COMMIT_MSG" =~ "LeetHub" ]]; then
             echo "should_run=true" >> $GITHUB_OUTPUT
-            echo "commit_msg=${COMMIT_MSG}" >> $GITHUB_OUTPUT
+            # 멀티라인 텍스트 처리를 위해 EOF 방식 사용 권장 (안전장치)
+            echo "commit_msg<<EOF" >> $GITHUB_OUTPUT
+            echo "$COMMIT_MSG" >> $GITHUB_OUTPUT
+            echo "EOF" >> $GITHUB_OUTPUT
+            
             echo "LeetHub 커밋 확인, 패키지 이사 작업 준비 ✅"
           else
             echo "should_run=false" >> $GITHUB_OUTPUT
-            echo "commit_msg=" >> $GITHUB_OUTPUT
             echo "작업 없이 패스하면 됩니다 ❌"
           fi
 
       - name: Detect New Solve Package
         id: detect_package
         if: steps.check_leethub.outputs.should_run == 'true'
+        shell: bash
         run: |
           EXCLUDE_DIRS=("LeetCode" "백준" "프로그래머스" ".github")
+          # 새로 추가되거나 변경된 최상위 디렉토리 찾기
           NEW_DIRS=$(git diff --name-only HEAD~1 HEAD | awk -F/ 'NF==2 {print $1}' | sort -u)
+          
+          echo "감지된 변경 디렉토리 후보: $NEW_DIRS"
 
+          FOUND=false
           for DIR in $NEW_DIRS; do
             SKIP=false
             for EX in "${EXCLUDE_DIRS[@]}"; do
@@ -57,27 +69,34 @@ jobs:
             if [[ "$SKIP" == false ]]; then
               echo "새로 추가된 문제풀이 패키지명: $DIR"
               echo "PACKAGE_NAME=$DIR" >> $GITHUB_OUTPUT
+              FOUND=true
               break
             fi
           done
+          
+          if [[ "$FOUND" == false ]]; then
+             echo "패키지 이름을 찾지 못했습니다. (기존 파일 수정일 수 있음)"
+             echo "PACKAGE_NAME=" >> $GITHUB_OUTPUT
+          fi
 
       - name: Extract Level from README
         id: extract_level
+        # PACKAGE_NAME이 비어있지 않을 때만 실행
         if: steps.check_leethub.outputs.should_run == 'true' && steps.detect_package.outputs.PACKAGE_NAME != ''
+        shell: bash
         run: |
           PACKAGE_NAME="${{ steps.detect_package.outputs.PACKAGE_NAME }}"
           README_PATH="$PACKAGE_NAME/README.md"
-         
+          
           if [ ! -f "$README_PATH" ]; then
             echo "README.md 파일 없음 ❌"
             echo "leetcode_level=Unknown" >> $GITHUB_OUTPUT
             exit 0
           fi
 
-          # h3 태그 안에서 난이도 추출
+          # 난이도 추출 (grep P 옵션 사용)
           LEVEL=$(grep -oP '(?<=<h3>).*?(?=</h3>)' "$README_PATH" | head -n 1)
 
-          # 없으면 fallback
           if [ -z "$LEVEL" ]; then
             LEVEL="Unknown"
           fi
@@ -87,6 +106,7 @@ jobs:
 
   move:
     needs: detect
+    # 여기서 needs.detect.outputs.package_name (소문자) 사용 필수!
     if: ${{ needs.detect.outputs.should_run == 'true' && needs.detect.outputs.package_name != '' }}
     runs-on: ubuntu-latest
 
@@ -95,49 +115,49 @@ jobs:
         uses: actions/checkout@v3
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-         
+          
       - name: Move Directory
+        shell: bash
         run: |
-          PACKAGE_NAME="${{ needs.detect.outputs.PACKAGE_NAME }}"
+          # 변수명 소문자로 통일하여 가져옴
+          PACKAGE_NAME="${{ needs.detect.outputs.package_name }}"
           LEVEL_DIRECTORY="${{ needs.detect.outputs.level }}"
           ROOT_DIR="LeetCode"
-     
-          echo "옮겨야 할 패키지 확인: $PACKAGE_NAME"
-          echo "감지된 레벨: $LEVEL_DIRECTORY"
-     
-          # 먼저 기존에 동일한 디렉토리 위치가 있는지 탐색
-          FOUND_EXISTING_PATH=""
-          for dir in "$ROOT_DIR"/*; do
-            if [ -d "$dir/$PACKAGE_NAME" ]; then
-              FOUND_EXISTING_PATH="$dir"
-              echo "기존 디렉토리 발견: $dir/$PACKAGE_NAME"
-              break
-            fi
-          done
-     
-          # 기존 위치로 이동
-          if [ -n "$FOUND_EXISTING_PATH" ]; then
-            DEST="$FOUND_EXISTING_PATH/$PACKAGE_NAME"
-            echo "→ 기존 디렉토리로 병합 이동: $DEST"
-            mv "$PACKAGE_NAME"/* "$DEST"/
-            rmdir "$PACKAGE_NAME" || true
-     
-          # 새로 이동해야 할 경우
+      
+          echo "옮겨야 할 패키지: $PACKAGE_NAME"
+          echo "난이도 폴더: $LEVEL_DIRECTORY"
+      
+          # 폴더가 실제로 있는지 확인
+          if [ ! -d "$PACKAGE_NAME" ]; then
+             echo "오류: $PACKAGE_NAME 디렉토리를 찾을 수 없습니다."
+             exit 1
+          fi
+
+          # 목적지 폴더 생성 (예: LeetCode/Medium)
+          mkdir -p "$ROOT_DIR/$LEVEL_DIRECTORY"
+          
+          DEST="$ROOT_DIR/$LEVEL_DIRECTORY/$PACKAGE_NAME"
+          
+          # 이미 존재하는지 확인 (덮어쓰기 로직)
+          if [ -d "$DEST" ]; then
+            echo "이미 존재하는 문제입니다. 병합합니다: $DEST"
+            cp -r "$PACKAGE_NAME"/* "$DEST"/
+            rm -rf "$PACKAGE_NAME"
           else
-           DEST="$ROOT_DIR/$LEVEL_DIRECTORY/$PACKAGE_NAME"
-            echo "→ 새 디렉토리로 이동: $DEST"
-            mkdir -p "$ROOT_DIR/$LEVEL_DIRECTORY"
-            mv "$PACKAGE_NAME" "$ROOT_DIR/$LEVEL_DIRECTORY/"
+            echo "새로 이동합니다: $DEST"
+            mv "$PACKAGE_NAME" "$DEST"
           fi
 
       - name: Commit and Push
         run: |
           COMMIT_MSG="${{ needs.detect.outputs.commit_msg }}"
-          echo "커밋 메세지 확인: $COMMIT_MSG"
-       
-          git config --global user.name <당신의 깃헙 닉네임>
-          git config --global user.email <당신의 깃헙 가입 이메일>
+          
+          # 깃헙 액션 봇 계정으로 설정
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
           git add .
-          git commit -m "$COMMIT_MSG" || echo "No changes to commit"
+          
+          # [skip ci]를 추가하여 무한 루프 방지
+          git commit -m "$COMMIT_MSG [skip ci]" || echo "No changes to commit"
           git push
