--- a/.github/workflows/leethub_movecode.yml
+++ b/.github/workflows/leethub_movecode.yml
@@ -2,7 +2,7 @@ name: LeetHub Setting
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "master" ]
 
 permissions:
   contents: write
